# ros_project

./: .gitignore  readme.md  robotStart.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/ur5_pkg/: ForwardKinematic.h  ForwardKinematicRequest.h  InverseKinematic.h  (+6 more)
logs/ur5_pkg/: build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr
src/bricks-stl/: X1-Y1-Z2.stl
src/ur5_pkg/: CMakeLists.txt  package.xml
src/ur5_pkg/config/: ur5 copy.yaml  ur5.yaml  ur5_gripper.yaml  ur5_modified copy.yaml  ur5_modified.yaml
src/ur5_pkg/include/: node.hpp  transformation_matrix.hpp  utils.hpp
src/ur5_pkg/include/ur5_pkg/: kinematics.h  node.h  transformation_matrix.h  utils.h
src/ur5_pkg/launch/: ur5.launch  ur5_gripper.launch  ur5_single.launch  ur5_test.launch
src/ur5_pkg/models/bricks-stl/: X1-Y2-Z1.stl  X1-Y2-Z2-CHAMFER.stl  X1-Y2-Z2.stl  X1-Y3-Z2-FILLET.stl  X2-Y2-Z2-FILLET.stl  X2-Y2-Z2.stl
src/ur5_pkg/src/: code_node (3).cpp  code_node copy.cpp  code_node.cpp  diff_kinematic.cpp  forward_kinematic.cpp  inverse_kinematic.cpp  jacobian_kinematic.cpp  kinematic.cpp  motionplan.cpp  node.cpp  node_old.cpp  pezzi_di_codice_a_caso.cpp  transformation_matrix.cpp  utils.cpp
src/ur5_pkg/srv/: ForwardKinematic.srv  InverseKinematic.srv  JacobianKinematic.srv
src/ur5_pkg/world/: my_world.world  my_world_single.world
src/ur5_pkg/world/files/: X1-Y2-Z2-TWINFILLET.stl  X1-Y3-Z2.stl  X1-Y4-Z1.stl  X1-Y4-Z2.stl
usefull_scripts/: detectionStart.sh  nodeStart.sh  robotStart.sh
usesfull_scripts/: nodeStart.sh
(+53 files in other folders)
